...
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.ActivityDetailVoisin"
    android:id="@+id/pageDetail">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:id="@+id/app_bar"
...


    <include layout="@layout/content_scrolling" />

    <android.support.design.widget.FloatingActionButton

        android:id="@+id/bouton_flottan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/white"
...
